--- a/package.json
+++ b/package.json
@@ -34,10 +34,8 @@
     "moedim": {
       "styled-components": "^6.1.8"
     },
-    "react-google-login": {
-      "peerDependencies": {
-        "react": "^18.2.0"
-      }
+    "resolutions": {
+      "react": "^17.0.0"
     }
   }
 }
