--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "moedim": "^0.5.0",
     "next": "14.1.4",
+    "@react-oauth/google": "0.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
