--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "dependencies": {
     "axios": "^1.6.8",
     "moedim": "^0.5.0",
-    "next": "14.1.4",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-google-login": "^5.2.2",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.9",
     "styled-components": "^6.1.8"
