--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.9",
     "styled-components": "^6.1.8"
