--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.9",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
