--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.9",
     "sharp": "^0.33.3",
+    "react-calendar": "^4.8.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
